katalog/jenkins-server/rbac.yml
apiVersion: v1
kind: Namespace
metadata:
    name: jenkins
