katalog/jenkins-server/deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-master
  labels:
    app: jenkins-master
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: jenkins
      containers:
        - name: jenkins-master
          image: jenkins/jenkins:lts
          imagePullPolicy: Always
          args:
          - "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)"
          - "--argumentsRealm.roles.$(ADMIN_USER)=admin"
          ports:
            - name: http
              containerPort: 8080
            - name: slavelistener
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 90
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /login
              port: http
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            - mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            - mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            - mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
      volumes:
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: secrets-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  labels:
    app: jenkins
spec:
  ports:
    - name: slavelistener
      port: 50000
      targetPort: slavelistener
  selector:
    app: jenkins-master
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  labels:
    app: jenkins-master
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: jenkins-master
